tests/NormalTests/paczka1/small_fuzzy/50617388.err
Error in line 3: A874 S450 46,1
Error in line 5: A874 A874 54,4
